# Council

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  Taskfile.yaml  cli_context.md  debug_cursor.py  debug_cursor_usage.py  debug_help.py  debug_js_fields.py  debug_js_sexp.py  debug_module.py  debug_parser.py  debug_query_validity.py  debug_ts.py  debug_ts_node.py  fix_unused_args.py  package-lock.json  pyproject.toml  test_parser_script.py
.github/workflows/: ci.yml
ai_docs/: project_context.md  tasks.md
knowledge/: click.md  fastmcp.md  httpx.md  jina_reader.md  jinja2.md  logfire.md  mcp.md  oauth_2_0.md  pydantic_ai.md  pytest_testing.md  python_3_12_features.md  python_dotenv.md  repomix.md  ruff_linting.md
scripts/: check_bandit_severity.py  generate_learn_prompt.py  group_and_review.py
src/council/: __init__.py  cli.py  config.py  main.py
src/council/agents/: __init__.py  councilor.py
src/council/cli/: __init__.py  main.py
src/council/cli/commands/: __init__.py  commit.py  context.py  group_review.py  housekeeping.py  learn.py  review.py
src/council/cli/core/: __init__.py  context_builder.py  review_executor.py
src/council/cli/ui/: __init__.py  output.py  spinner.py  streaming.py
src/council/cli/utils/: __init__.py  constants.py  errors.py  paths.py  validation.py
src/council/core/: parser.py
src/council/templates/: system_prompt.j2
src/council/tools/: __init__.py  architecture.py  cache.py  code_analysis.py  context.py  db_file_discovery.py  db_relation_tracer.py  debug.py  exceptions.py  git_tools.py  metrics.py  metrics_collector.py  path_utils.py  persistence.py  repomix.py  scribe.py  security.py  sql_parser.py  static_analysis.py  testing.py  utils.py  validation.py
tests/: conftest.py  test_agents_councilor.py  test_agents_councilor_knowledge.py  test_cli.py  test_cli_commands_context.py  test_cli_commands_group_review.py  test_cli_commands_housekeeping.py  test_cli_commands_learn.py  test_cli_commands_review.py  test_cli_core_context_builder.py  test_config.py  test_main.py  test_multilang_analysis.py  test_tools_architecture.py  test_tools_cache.py  test_tools_code_analysis.py  test_tools_context.py  test_tools_db_file_discovery.py  test_tools_db_relation_tracer.py  test_tools_db_relation_tracer_bdd.py  test_tools_debug.py  test_tools_exceptions.py  test_tools_git_tools.py  test_tools_metrics.py  test_tools_metrics_collector.py  test_tools_path_utils.py  test_tools_persistence.py  test_tools_repomix.py  test_tools_scribe.py  test_tools_security.py  test_tools_sql_parser.py  test_tools_static_analysis.py  test_tools_testing.py  test_tools_utils.py
tests/integration/: __init__.py  test_review_flow.py
