[project]
name = "the-council"
version = "0.1.0"
description = "AI Code Review Agent acting as an MCP Server"
requires-python = ">=3.12"
dependencies = [
    "fastmcp",
    "pydantic-ai",
    "httpx",
    "logfire",
    "devtools",
    "jinja2",
    "click",
    "python-dotenv",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-go>=0.23.0",
]

[project.scripts]
council = "council.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/council"]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.ruff]
# Enable auto-fix
fix = true
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["council"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (requires external tools)",
    "asyncio: marks tests as async tests",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
